# DeepH-dock

./: .gitignore  README.md  pyproject.toml
deepx_dock/: misc.py
deepx_dock/compute/density_matrix/: density_matrix.py
deepx_dock/compute/eigen/: hamiltonian.py  matrix.py  wavefunction.py
deepx_dock/compute/pyscf/: pyscf2deeph.py  read_structure.py
deepx_dock/convert/deeph/: translate_old_dataset_to_new.py
deepx_dock/convert/fhi_aims/: _cli.py  aims_to_deeph.py  parse_ctrl_in.py
docs/: .readthedocs.yaml  citation_and_license.md  gen_capabilities.py  index.rst  installation_and_setup.md  key_concepts.md
examples/analyze/dataset/: demo.ipynb
examples/analyze/dft_equiv/: demo.ipynb
examples/analyze/error/: demo.ipynb
examples/compute/density_matrix/: demo.ipynb
examples/compute/density_matrix/density_matrix.clean/: POSCAR  info.json  overlap.h5
examples/compute/eigen/: demo.ipynb
examples/compute/overlap/: demo.ipynb
examples/compute/pyscf/: demo.ipynb  pyscf_deeph_data
examples/convert/abacus/: demo.ipynb
examples/convert/deeph/: demo.ipynb
examples/convert/fhi_aims/: demo.ipynb
examples/convert/fhi_aims/periodic_aims_dataset/MoS2/: basis-indices.out  control.in  rs_hamiltonian_dn.out  rs_hamiltonian_up.out  rs_indices.out  rs_overlap.out
examples/convert/fhi_aims/periodic_aims_dataset/Si/: basis-indices.out  control.in  geometry.in  rs_hamiltonian.out  rs_indices.out  rs_overlap.out
examples/convert/hopcp/: demo.ipynb
examples/convert/openmx/: demo.ipynb
examples/convert/siesta/: demo.ipynb
examples/design/mattergen_chgnet/: demo.ipynb
tests/analyze/error/infer.bak/: error_elements_pair_distribution.h5
tests/compute/pyscf/deeph.bak/H2O/: hamiltonian.h5  info.json
tests/compute/pyscf/deeph.bak/H2O_U/: POSCAR  hamiltonian.h5  info.json  overlap.h5
tests/compute/pyscf/deeph.bak/MgO/: POSCAR  band_data.h5  hamiltonian.h5  info.json  overlap.h5
tests/compute/pyscf/deeph.bak/MgO_2/: band_data.h5  hamiltonian.h5  info.json  overlap.h5
